--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+certifi==2023.7.22
+charset-normalizer==3.2.0
+customtkinter==5.2.0
+darkdetect==0.8.0
+idna==3.4
+Pillow==10.0.0
 pytube==15.0.0
+requests==2.31.0
 tqdm==4.66.1
+urllib3==2.0.4
