[update] requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+altgraph==0.17.3
+Brotli==1.0.9
 certifi==2023.7.22
 charset-normalizer==3.2.0
+colorama==0.4.6
 customtkinter==5.2.0
 darkdetect==0.8.0
 idna==3.4
+mutagen==1.46.0
+pefile==2023.2.7
 Pillow==10.0.0
+pycryptodomex==3.18.0
+pyinstaller==5.13.1
+pyinstaller-hooks-contrib==2023.7
 pytube==15.0.0
+pywin32-ctypes==0.2.2
 requests==2.31.0
 tqdm==4.66.1
 urllib3==2.0.4
+websockets==11.0.3
+yt-dlp==2023.7.6
